--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,8 @@ erl_crash.dump
 # The directory NPM downloads your dependencies sources to.
 /assets/node_modules
 #/priv/static/
-/uploads
+uploads/*
+
 /config/.env
 #/config/prod.secret.exs
 /config/*.secret.exs
